# Adaptron

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  PRD.md  README.md  STRUCTURE.md  TASKS.md  hortlog -snegit shortlog -sne  pyproject.toml
.cursor/rules/: ai-workflow.mdc  architecture.mdc  bridges.mdc  core.mdc  dependencies.mdc  documentation.mdc  error-handling.mdc  performance.mdc  python-standards.mdc  testing.mdc
.github/workflows/: ci.yml
adaptron/: __init__.py
adaptron/bridges/: __init__.py  crewai_bridge.py  langchain_bridge.py
adaptron/core/: __init__.py  adapters.py  agent.py  errors.py  logging.py  pipeline.py
docs/playground/: README.md  index.html  replay-data.json  replay.js  styles.css
examples/: cross_framework_pipeline.py  plain_python_pipeline.py
tests/: test_adapters.py  test_agent.py  test_bridges_crewai.py  test_bridges_langchain.py  test_errors.py  test_examples.py  test_logging.py  test_pipeline.py  test_post_v1.py
