[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptron"
version = "0.1.0"
description = "Connect AI agents from different frameworks into one pipeline — without writing glue code."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]

[project.optional-dependencies]
# Bridge pins: revisit deliberately when bumping (PLAN.md §6). LangChain
# current stable line is 1.3.x (verified against PyPI at Phase 5 Task 5.1);
# pin major+minor tightly so upstream API drift is intentional, not silent.
langchain = ["langchain>=1.3,<1.4"]
# CrewAI pin remains a Phase 0 stub until Phase 6 confirms its stable range.
crewai = ["crewai>=1.0,<2"]
dev = [
    "pytest>=8.0,<10",
    "ruff>=0.8,<1",
    "mypy>=1.11,<3",
    "pre-commit>=3.5,<5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["adaptron*"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["adaptron", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unreachable = true
show_error_codes = true
packages = ["adaptron"]
# Bridge modules are duck-typed against optional third-party APIs; targeted
# overrides / ignores land with Phases 5–6 (PLAN.md §5).

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-ra"]
